WIP: Session and Validator class refactor

--- a/mago.toml
+++ b/mago.toml
@@ -1,5 +1,5 @@
 [source]
-paths = ["controllers", "core", "public", "views"]
+paths = ["Http", "core", "public", "views"]
 
 [formatter]
 print-width = 100
